# Project-One

./: CMakeLists.txt  README.md  main.cpp
src/: RoboUnit.cxx  RoboUnit.hxx  SimpleUnit.cxx  SimpleUnit.hxx  main.cpp
src/fight/: AdvancedFightSimulator.cxx  AdvancedFightSimulator.hxx  FightSimulator.cxx  FightSimulator.hxx  ModernFightSimulator.cxx  ModernFightSimulator.hxx
src/humanoid/: Humanoid.cxx  Humanoid.hxx
src/humanoid/type/: Druid.cxx  Druid.hxx  Dwarf.cxx  Dwarf.hxx  Elf.cxx  Elf.hxx
src/interface/: IFightSimulator.hxx  IRocketLauncher.hxx  ITeamCompositor.hxx  IUnit.hxx  IYieldValue.hxx
src/mech/: Bumblebee.cxx  Bumblebee.hxx  Mech.cxx  Mech.hxx
src/modules/: YieldValue.cxx  YieldValue.hxx
src/modules/Fibonacci/: Fibonacci.cxx  Fibonacci.hxx
src/modules/Fibonnacci/: Fibonacci.cxx  Fibonacci.hxx
src/modules/GoldenNumber/: GoldenNumber.cxx  GoldenNumber.hxx
src/modules/RocketLauncher/: RocketLauncher.cxx  RocketLauncher.hxx
src/modules/WeirdCalculator/: WeirdCalculator.cxx  WeirdCalculator.hxx
src/modules/calculator/: SimpleCalculator.cxx  SimpleCalculator.hxx
src/modules/interface/: ICalculator.hxx  IRocketLauncher.hxx
src/monster/: Monster.cxx  Monster.hxx
src/monster/type/: FrostAtronach.cxx  FrostAtronach.hxx  Phoenix.cxx  Phoenix.hxx  Werewolf.cxx  Werewolf.hxx
src/team/: RandomTeamCompositor.cxx  RandomTeamCompositor.hxx  TeamCompositor.cxx  TeamCompositor.hxx  randomTeamCompositor.cxx  randomTeamCompositor.hxx  teamCompositor.hxx
